asr: add tee-type API
The new API can show the current tee platform information.

Related to #1307
